- Fix bug that prevented admin to change the recurring payment frequency to anything else than 'Days' in few cases
- Fix a bug in Automated Email Response Settings that did always enable the email when saving changes
- Fix bug that would send some emails even when the 'MS_STOP_EMAILS' flag was active
- Fix plugin logic to allow changing Protection Rules even when Content Protection is disabled
- Fix compatibility issue with WP Recaptcha during user registration
- Fix a minor security hole in the data import module
- Fix a rare 403 error that happened when a user was accessing protected content
- Fix a bunch of PHP notices and warnings
- A lot of small improvements behind the scenes, cleanup and some new filters

1.0.0.8
----------------------------------------------------------------------
- Add new option to customize which users are considered Admin users (details in the Help > Advanced page)
- Fix a typo in the PayPal Single gateway that caused M2 to ignore some payment information
- Fix bugs that prevented removing protection from individual posts or pages
- Fix the search function on the Members page
- Fix two possible infinite loops that resulted in timeouts or rule values not being saved
- Fix wrong protection logic of the Admin Side Add-on
- Fix wrong protection logic of the Advanced Menu Add-on
- Fix small issue that did not correctly disable the Media Add-on
- Fix a wrong parameters that limited search results of list tables to 5 items in some cases
- Fix the description text of the ms-protected-content shortcode for admin users
- Fix a typo in the ms_rule_has_access filter
- Fix a possible/rare mis-configuration that could happen on single-site installations

1.0.0.7
----------------------------------------------------------------------
- Improve Transaction logs to also log inactice or invalid gateway calls
- Fix issue that did not display any "Page" rules in the Membership Overview screen